--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "1673009928:AAGjLt-1pqExXgKxFfZMPKIKFGakQL_jDZU",
   "AUTH": {
     "ENABLE": false,
     "PASSWORD": "",
